# wordle-on-telegram

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  Readme.md  pyproject.toml
.github/workflows/: pre-commit.yml
data/: words.json
dev/: docker-compose.dev.yml  docker-compose.prod.yml
dev/dockerfiles/postgresql/: Dockerfile  postgresql.conf
frontend/: .env.production  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json
frontend/src/: .env.preview  .env.production  App.css  App.jsx  Constants.jsx  index.css  main.jsx  utils.js
frontend/src/api/: WordsAPI.jsx
frontend/src/components/: Letters.jsx  Painting.jsx  Row.jsx  Title.jsx  Words.jsx
frontend/src/data/: keys.js
frontend/src/pages/: Game.jsx  Success.jsx
src/: alembic.ini  app.py  bot.py  commands.py  schedule_task.py  words2table.py  worker.py
src/admin/: __init__.py  user_words.py  users.py  words.py
src/api/: __init__.py  users.py  words.py
src/handlers/: admin.py  send_message.py  start.py  statistic.py
src/methods/: send_messages.py  users.py  words.py
src/middlewares/: session.py
src/migrations/: env.py
src/migrations/versions/: 1708627715_aeb8bb832155.py  1708777552_1b537c697d8f.py  1708779360_a914d6c9c36e.py  1708779406_39d072341e49.py  1709204956_94a4596add96.py  1709205904_f60d097494da.py  1709208191_92da04d0453e.py
src/models/: __init__.py  _absctract.py  user_word_m2m.py  user_words.py  users.py  words.py
src/querysets/: users.py  words.py
src/schemas/: users.py
src/settings/: base.py  db.py
src/utils/: __init__.py  auth.py  general_state.py  keyboards.py
